--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
                 <h1>New Year Party <br>Celebration</h1>
             </div>
         </section>
+        <section>
+            <div class="holiday-deal">
+                <h1>65% OFF</h1>
+                <h5>OUR HOLIDAY DEALS ARE BETTER</h5>
+                <h2>ALL CATEGORIES</h2>
+                <img src="resources/New Year Photo.png" alt="">
+            </div>
+            
+        </section>
     </header>
     <main>
 
