--- a/index.html
+++ b/index.html
@@ -93,6 +93,40 @@
                 </div>
             </div>
         </section>
+
+<!-- Portfolio Section -->
+        <section class="portfolio-full">
+            <div class="new-best portfolio-text">
+                <h5>THE BEST GIFTS</h5>
+                <h1>Our Awesome Portfolio</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div>
+                <div>
+                    <img src="resources/Rectangle 3.png" alt="" class="protfolio-image">
+                    <img src="resources/Rectangle 4.png" alt="" class="protfolio-image">
+                    <img src="resources/Rectangle 5.png" alt="" class="protfolio-image">
+
+                </div>
+                <div>
+                    <img src="resources/Rectangle 6.png" alt="" class="protfolio-image">
+                    <img src="resources/Rectangle 7.png" alt="" class="protfolio-image">
+                    <img src="resources/Rectangle 8.png" alt="" class="protfolio-image">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div>
+                <img src="" alt="">
+                <h2></h2>
+                <p></p>
+                <div class="subscribe-part">
+                    <input type="email" name="" id="">
+                    <button>Subscribe</button>
+                </div>
+                
+            </div>
+        </section>
     </main>
     <footer>
 
