--- a/index.html
+++ b/index.html
@@ -115,13 +115,14 @@
                 </div>
             </div>
         </section>
+        <!-- newsletter-part -->
         <section>
-            <div>
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+            <div class=" newsletter-text general-size">
+                <img src="resources/Group 61.png" alt="">
+                <h2>Subscribe Newsletter</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 <div class="subscribe-part">
-                    <input type="email" name="" id="">
+                    <input type="email" name="" id="" placeholder="user@gmail.com">
                     <button>Subscribe</button>
                 </div>
                 
